force-app/main/default/objects/MessageLogEvent__e/MessageLogEvent__e.object-meta.xml
<CustomObject>
    <label>MessageLogEvent</label>
    <pluralLabel>MessageLogEvent</pluralLabel>
</CustomObject>