force-app/main/default/objects/MessageLogEvent__e/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <label>MessageType</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>