force-app/main/default/objects/MessageLogEvent__e/fields/SfdcUser__c.field-meta.xml
<CustomField>
    <fullName>SfdcUser__c</fullName>
    <label>SfdcUser</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>